--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,9 @@
     rgba(255, 255, 255, 0)
   );
 
+  .stuff {
+    background-color: #d9d9d925;
+  }
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
   --tile-border: conic-gradient(
