--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -41,6 +45,19 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  --color-bg1: rgb(53, 121, 48);   /* Deep green */
+  --color-bg2: rgb(43, 98, 39);    /* Darker deep green */
+  --color1: 53, 121, 48;           /* Primary green */
+  --color2: 40, 91, 36;            /* Muted deep green */
+  --color3: 20, 46, 18;            /* Very dark green */
+  --color4: 0, 80, 0;              /* Forest green */
+  --color5: 0, 100, 0;             /* Deeper forest green */
+  --color-interactive: 67, 150, 60; /* Vibrant interactive green */
+  
+    
+    --circle-size: 80%;
+    --blending: hard-light;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -86,6 +103,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Roboto", serif;
+  font-optical-sizing: auto;
 }
 
 body {
@@ -102,7 +121,172 @@ a {
   color: inherit;
   text-decoration: none;
 }
+.circle {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  align-items: center;
+  background: linear-gradient(
+    to bottom,
+    transparent,
+    rgb(var(--background-end-rgb))
+  )
+  rgb(var(--background-start-rgb));
+  color: #2abe1f;
+  
+}
 
+.text {
+  width: 200px;
+  height: 200px;
+
+  position: absolute;
+  animation: anim 10s linear infinite;
+}
+
+.text span {
+  position: absolute;
+  left: 55%;
+  font-size: 1.2em;
+  transform-origin: 0 100px;
+}
+
+@keyframes anim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+.gradient-bg {
+  width: 100vw;
+  height: 100dvh;
+
+z-index: -1;
+  position: fixed;
+top: 0;
+left: 0;
+ overflow: hidden;
+
+
+  
+
+}
+.gradient-bg .gradient-container {
+  filter: url(#goo) blur(50px);
+  width: 100%;
+  height: 100%;
+}
+.gradient-bg svg {
+  display: none;
+}
+.gradient-bg .bg1 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+  mix-blend-mode: var(--blending);
+  width: var(--circle-size);
+  height: var(--circle-size);
+  top: calc(50% - var(--circle-size) / 2);
+  left: calc(50% - var(--circle-size) / 2);
+  transform-origin: center center;
+  animation: moveVertical 30s ease infinite;
+  opacity: 1;
+}
+.gradient-bg .bg2 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+  mix-blend-mode: var(--blending);
+  width: var(--circle-size);
+  height: var(--circle-size);
+  top: calc(50% - var(--circle-size) / 2);
+  left: calc(50% - var(--circle-size) / 2);
+  transform-origin: calc(50% - 400px);
+  animation: moveInCircle 20s reverse infinite;
+  opacity: 1;
+}
+.gradient-bg .bg3 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+  mix-blend-mode: var(--blending);
+  width: var(--circle-size);
+  height: var(--circle-size);
+  top: calc(50% - var(--circle-size) / 2 + 200px);
+  left: calc(50% - var(--circle-size) / 2 - 500px);
+  transform-origin: calc(50% + 400px);
+  animation: moveInCircle 40s linear infinite;
+  opacity: 1;
+}
+
+.gradient-bg .bg5 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+  mix-blend-mode: var(--blending);
+  width: calc(var(--circle-size) * 2);
+  height: calc(var(--circle-size) * 2);
+  top: calc(50% - var(--circle-size));
+  left: calc(50% - var(--circle-size));
+  transform-origin: calc(50% - 800px) calc(50% + 200px);
+  animation: moveInCircle 20s ease infinite;
+  opacity: 1;
+}
+.gradient-bg .mouse-mover {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+  mix-blend-mode: var(--blending);
+  width: 100%;
+  height: 100%;
+  top: -50%;
+  left: -50%;
+  opacity: 0.7;
+}
+
+@keyframes moveInCircle {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes moveVertical {
+  0% {
+    transform: translateY(-50%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+
+@keyframes wave {
+  0%{
+      transform: rotate(40deg);
+  }
+25%{
+  transform: rotate(60deg);
+}
+  50%{
+      transform: rotate(40deg);
+  }
+  75%{
+      transform: rotate(20deg);
+  }
+  100%{
+      transform: rotate(40deg);
+  }
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
